--- a/app/www/extra.css
+++ b/app/www/extra.css
@@ -1,18 +1,18 @@
 #map-map {
-  height : 90vh !important;
+  height : 95vh !important;
 }
 
 #file_report {
   color: #337ab7;
 }
 
-.valid, #valid_details, #created_from_map {
+.valid{
   color: #34c369;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
-.invalid, #invalid_details, #created_from_map_not {
-  color: #b83343;
-  font-size: 1.2em;
+.invalid {
+  color: #f03561;
+  font-size: 1.1em;
 }
 
