iframe to avoid conflicts btw report and app css

--- a/app/www/extra.css
+++ b/app/www/extra.css
@@ -29,3 +29,11 @@
   font-size: 1.8em;
   text-align: center;
 }
+
+#report_html {
+  max-height: 900px!important;
+}
+
+#iframe_report {
+  height: 90vh;
+}
