Add new module custom_report
This is required for v2 (see #5). All templates are now in /templates.
There are now two report tabs and main tab switch porperly. This commit
also use chrome_print() to print PDF (see #11).

--- a/app/www/extra.css
+++ b/app/www/extra.css
@@ -44,6 +44,22 @@
   text-align: center;
 }
 
+/* Warning page style */
+
+#msg_warning {
+  color: #e41848;
+  text-align: center;
+}
+
+#msg_warning h1 {
+  color: #e41848;
+  font-size: 6em;
+}
+
+#msg_warning h2 {
+  font-size: 2em;
+}
+
 
 /* custom details see  https://stackoverflow.com/questions/10813581/replace-the-expand-icon-of-html5-details-tag*/
 
